# LoopProfit

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: android-apk.yml  build-qt-android-apk.yml  ci.yml  coverage.yml
android/: README.md
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/loopprofit/android/: MainActivity.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android/package/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/package/res/values/: colors.xml
docs/: ANDROID_RELEASE.md
qml/: Main.qml
scripts/: bootstrap_android_env.sh  build_android_apk.sh  build_android_release_apk.sh  check_android_env.sh  check_merge_conflicts.sh  fetch_apk_url.sh  package_release_apk.sh  publish_release_apk.sh  release_apk_link.sh  run_coverage.sh  setup_ubuntu_qt6.sh  trigger_android_release.sh
src/: AppController.cpp  AppController.h  DatabaseManager.cpp  DatabaseManager.h  LoopEngine.cpp  LoopEngine.h  main.cpp  models.h
tests/: test_loopengine.cpp
